--- a/about.html
+++ b/about.html
@@ -16,73 +16,66 @@
             <div class="header__wrapper" id="header">
                 <div class="container">
                     <div class="header__inner">
-                        <a class="header__logo" href="/">
-                            <img src="assets/images/logo.svg" alt="">
+                        <!-- <div class="header__top">
+                    <address class="contacts">
+                        <div class="contacts__item">
+                            <img class="contacts__icon" src="assets/images/icons/map.svg" alt="">
+                            Санкт-Петербург
+                        </div>
+                        <a class="contacts__item" href="mailto:sofigorod@yandex.ru">
+                            <img class="contacts__icon" src="assets/images/icons/mail.svg" alt="">
+                            sofigorod@yandex.ru
                         </a>
-                        <div class="header__right">
-                            <div class="header__top">
-                                <div class="header__top-img">
-                                    <img src="assets/images/header/gray-bg.png" alt="">
-                                </div>
-                                <address class="contacts">
-                                    <div class="contacts__item">
-                                        <img class="contacts__icon" src="assets/images/icons/map.svg" alt="">
-                                        Санкт-Петербург
-                                    </div>
-                                    <a class="contacts__item" href="mailto:sofigorod@yandex.ru">
-                                        <img class="contacts__icon" src="assets/images/icons/mail.svg" alt="">
-                                        sofigorod@yandex.ru
-                                    </a>
-                                    <a class="contacts__item" href="tel:+79219697771">
-                                        <img class="contacts__icon" src="assets/images/icons/phone.svg" alt="">
-                                        +7 (921) 969-77-71
-                                    </a>
-                                    <ul class="socials">
-                                        <li class="socials__item">
-                                            <a href="#" target="_blank">
-                                                <img src="assets/images/socials/whatsapp.svg" alt="whatsapp">
-                                            </a>
-                                        </li>
-                                        <li class="socials__item">
-                                            <a href="#" target="_blank">
-                                                <img src="assets/images/socials/telegram.svg" alt="telegram">
-                                            </a>
-                                        </li>
-                                        <li class="socials__item">
-                                            <a href="#" target="_blank">
-                                                <img src="assets/images/socials/phone.svg" alt="phone">
-                                            </a>
-                                        </li>
-                                        <li class="socials__item">
-                                            <a href="#" target="_blank">
-                                                <img src="assets/images/socials/vk.svg" alt="vk">
-                                            </a>
-                                        </li>
-                                        <li class="socials__item">
-                                            <a href="#" target="_blank">
-                                                <img src="assets/images/socials/instagram.svg" alt="instagram">
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </address>
-                                <select class="lang">
-                                    <option class="lang__item" value="ru">ru</option>
-                                    <option class="lang__item" value="en">en</option>
-                                </select>
-                            </div>
-                            <div class="header__bottom">
-                                <nav class="menu  header__menu">
-                                    <ul class="menu__list">
-                                        <li><a href="services.html">Наши услуги</a></li>
-                                        <li><a href="about.html">О проекте</a></li>
-                                        <li><a href="gallery.html">Фотогалерея</a></li>
-                                        <li><a href="team.html">Команда</a></li>
-                                        <li><a href="reviews.html">Отзывы</a></li>
-                                        <li><a href="contacts.html">Контакты</a></li>
-                                    </ul>
-                                </nav>
-                                <a class="btn" href="#">Оставить заявку</a>
-                            </div>
+                        <a class="contacts__item" href="tel:+79219697771">
+                            <img class="contacts__icon" src="assets/images/icons/phone.svg" alt="">
+                            +7 (921) 969-77-71
+                        </a>
+                        <ul class="socials  header__socials">
+                            <li class="socials__item">
+                                <a href="#" target="_blank">
+                                    <img src="assets/images/socials/whatsapp.svg" alt="whatsapp">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" target="_blank">
+                                    <img src="assets/images/socials/telegram.svg" alt="telegram">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" target="_blank">
+                                    <img src="assets/images/socials/phone.svg" alt="phone">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" target="_blank">
+                                    <img src="assets/images/socials/vk.svg" alt="vk">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" target="_blank">
+                                    <img src="assets/images/socials/instagram.svg" alt="instagram">
+                                </a>
+                            </li>
+                        </ul>
+                    </address>
+                    <select class="lang">
+                        <option class="lang__item" value="ru">ru</option>
+                        <option class="lang__item" value="en">en</option>
+                    </select>
+                </div> -->
+                        <div class="header__bottom">
+                            <a href="/"><img src="assets/images/logo.svg" alt=""></a>
+                            <nav class="menu  header__menu">
+                                <ul class="menu__list">
+                                    <li><a href="services.html">Наши услуги</a></li>
+                                    <li><a href="about.html">О проекте</a></li>
+                                    <li><a href="gallery.html">Фотогалерея</a></li>
+                                    <li><a href="team.html">Команда</a></li>
+                                    <li><a href="reviews.html">Отзывы</a></li>
+                                    <li><a href="contacts.html">Контакты</a></li>
+                                </ul>
+                            </nav>
+                            <a class="btn" href="#">Оставить заявку</a>
                         </div>
                     </div>
                 </div>
@@ -102,7 +95,7 @@
         </header>
 
         <main class="page">
-            <section class="page__section  about  background-line-right">
+            <section class="page__section  about">
                 <div class="container">
                     <h2 class="section-title">О компании</h2>
 
@@ -111,6 +104,9 @@
                             <div class="about__desc">
                                 <p><span class="text-black">SG art project –</span> разработка и проведение культурных программ. Вип туры. Экскурсии на русском и английском.</p>
                                 <p>Наш проект направлен на создание культурных мероприятий, которые включают в себя экскурсии, лекции, прогулки, арт-встречи.</p>
+                            </div>
+                            <div class="about__img-mobile">
+                                <img src="assets/images/about/about.jpg" alt="Фото девушки на фоне колонны">
                             </div>
                             <div class="about__quote">
                                 <blockquote class="about__quote-text">
@@ -241,7 +237,7 @@
                 <div class="footer__inner">
                     <div class="footer__logo">
                         <img class="footer__logo-img" src="assets/images/logo.svg" alt="">
-                        <ul class="socials">
+                        <ul class="socials  footer__socials">
                             <li class="socials__item">
                                 <a href="#" target="_blank">
                                     <img src="assets/images/socials/whatsapp.svg" alt="whatsapp">
