--- a/reviews.html
+++ b/reviews.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.min.css" rel="stylesheet">
-    <title>SG Art project - Наши услуги</title>
+    <title>SG Art project - Отзывы</title>
 </head>
 
 <body>
@@ -88,101 +88,47 @@
                 <div class="container">
                     <div class="intro__inner  intro__inner_padding_s">
                         <div>Хлебные крошки..</div>
-                        <h1 class="intro__title  intro__title_s">Пешеходная Экскурсия</h1>
+                        <h1 class="intro__title  intro__title_s">Отзывы</h1>
                     </div>
                 </div>
             </div>
         </header>
 
         <main class="page">
-            <div class="page__section  services-single">
-                <div class="container">
-                    <div class="services-single__header">
-                        <div class="services-single__img">
-                            <img src="assets/images/services/preview1.jpg" alt="">
-                        </div>
-                        <div class="services-single__info">
-                            <div class="services-single__text">
-                                <p>
-                                    <b>Место начала и окончания:</b> по согласованию, где вам удобно. У отеля, квартиры, вокзала, аэропорта.
-                                </p>
-                                <p><b>Длительность:</b> 2 часа</p>
-                                <p>
-                                    <b>Количество человек в группе:</b> если на моей машине, то до 4-х. А если вас 5 или больше - тогда арендуем транспорт с водителем.
-                                </p>
-                                <div class="services-single__price">5 000р</div>
-                            </div>
-                            <div class="form  form_mini">
-                                <div class="form__inner">
-                                    <h3 class="form__title">Заказать экскурсию</h3>
-                                    <form class="form__wrapper" action="/">
-                                        <div class="form__casing">
-                                            <div class="form__group">
-                                                <input class="form__input" type="text" placeholder="Ваше имя">
-                                            </div>
-                                            <div class="form__group">
-                                                <input class="form__input" type="tel" placeholder="Ваш телефон">
-                                            </div>
-                                            <div class="form__group">
-                                                <input class="form__checkbox" type="checkbox" name="" id="check-policy">
-                                                <label class="form__checkbox-label" for="check-policy">Я&nbsp;согласен на&nbsp;обработку моих <a href="#">персональных данных</a></label>
-                                            </div>
-                                            <div class="form__group">
-                                                <button class="btn  form__btn" type="submit">Заказать экскурсию</button>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="services-single__inner">
-                        <div class="services-single__description">
-                            <h2 class="services-single__title">Описание</h2>
-                            <p class="services-single__text">
-                                «Петербург - многоликий город. Видите: сегодня у него таинственное и пугающее лицо. В белые ночи он очаровательно воздушен. Это - живой, глубоко чувствующий город» - Максим Горький. Предлагаем Вам прогулку по Петербургу, чтобы узнать в каком обличии он предстанет перед Вами.
-                            </p>
-                            <p class="services-single__text">
-                                Маршрут разрабатываем согласно вашим предпочтениям. Есть варианты прогулок по Васильевскому острову, Центру, Петроградской стороне. Стоимость экскурсии зависит от количества участников и маршрута.
-                            </p>
-                        </div>
-                        <div class="faq" data-accordeon>
-                            <h2 class="services-single__title">Частые вопросы</h2>
-                            <ul class="faq__list">
-                                <li class="faq__item">
-                                    <button class="faq__control" type="button" aria-expanded="false">
-                                        <div class="faq__name">Нам не удобны длительные пешие переходы по здоровью. Много ли надо будет ходить пешком?</div>
-                                        <div class="faq__plus"></div>
-                                    </button>
-                                    <div class="faq__content" aria-hidden="true">На&nbsp;то&nbsp;экскурсия и&nbsp;индивидуальная, чтобы мы&nbsp;подстроились под ваши возможности, темп. По&nbsp;умолчанию мы&nbsp;минут 15-20 ходим вокруг Исаакиевского собора, у&nbsp;Медного всадника. Но, конечно, можем сократить выходы из&nbsp;автомобиля до&nbsp;минимума. Вам будет удобно.</div>
-                                </li>
-                                <li class="faq__item">
-                                    <button class="faq__control" type="button" aria-expanded="false">
-                                        <div class="faq__name">Нам не удобны длительные пешие переходы по здоровью. Много ли надо будет ходить пешком?</div>
-                                        <div class="faq__plus"></div>
-                                    </button>
-                                    <div class="faq__content" aria-hidden="true">На&nbsp;то&nbsp;экскурсия и&nbsp;индивидуальная, чтобы мы&nbsp;подстроились под ваши возможности, темп. По&nbsp;умолчанию мы&nbsp;минут 15-20 ходим вокруг Исаакиевского собора, у&nbsp;Медного всадника. Но, конечно, можем сократить выходы из&nbsp;автомобиля до&nbsp;минимума. Вам будет удобно.</div>
-                                </li>
-                                <li class="faq__item">
-                                    <button class="faq__control" type="button" aria-expanded="false">
-                                        <div class="faq__name">Нам не удобны длительные пешие переходы по здоровью. Много ли надо будет ходить пешком?</div>
-                                        <div class="faq__plus"></div>
-                                    </button>
-                                    <div class="faq__content" aria-hidden="true">На&nbsp;то&nbsp;экскурсия и&nbsp;индивидуальная, чтобы мы&nbsp;подстроились под ваши возможности, темп. По&nbsp;умолчанию мы&nbsp;минут 15-20 ходим вокруг Исаакиевского собора, у&nbsp;Медного всадника. Но, конечно, можем сократить выходы из&nbsp;автомобиля до&nbsp;минимума. Вам будет удобно.</div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            Отзывы!!
         </main>
 
         <footer class="footer" id="footer">
+            <div class="form">
+                <div class="container">
+                    <div class="form__inner">
+                        <h3 class="form__title  form__title_white">@@titleForm</h3>
+                        <form class="form__wrapper" action="/">
+                            <textarea class="form__input  form__input-area" name="" id="" placeholder="Ваш отзыв"></textarea>
+                            <div class="form__casing">
+                                <div class="form__group">
+                                    <input class="form__input" type="text" placeholder="Ваше имя">
+                                </div>
+                                <div class="form__group">
+                                    <input class="form__input" type="tel" placeholder="Ваш телефон">
+                                </div>
+                                <div class="form__group">
+                                    <input class="form__checkbox" type="checkbox" name="" id="check-policy">
+                                    <label class="form__checkbox-label  text-white" for="check-policy">Я&nbsp;согласен на&nbsp;обработку моих <a href="#">персональных данных</a></label>
+                                </div>
+                                <div class="form__group">
+                                    <button class="btn  form__btn" type="submit">Заказать экскурсию</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
             <div class="container">
                 <div class="footer__inner">
                     <div class="footer__logo">
                         <img class="footer__logo-img" src="assets/images/logo.svg" alt="">
-                        <ul class="socials  footer__socials">
+                        <ul class="socials">
                             <li class="socials__item">
                                 <a href="#" target="_blank">
                                     <img src="assets/images/socials/whatsapp.svg" alt="whatsapp">
