--- a/team.html
+++ b/team.html
@@ -16,73 +16,66 @@
             <div class="header__wrapper" id="header">
                 <div class="container">
                     <div class="header__inner">
-                        <a class="header__logo" href="/">
-                            <img src="assets/images/logo.svg" alt="">
+                        <!-- <div class="header__top">
+                    <address class="contacts">
+                        <div class="contacts__item">
+                            <img class="contacts__icon" src="assets/images/icons/map.svg" alt="">
+                            Санкт-Петербург
+                        </div>
+                        <a class="contacts__item" href="mailto:sofigorod@yandex.ru">
+                            <img class="contacts__icon" src="assets/images/icons/mail.svg" alt="">
+                            sofigorod@yandex.ru
                         </a>
-                        <div class="header__right">
-                            <div class="header__top">
-                                <div class="header__top-img">
-                                    <img src="assets/images/header/gray-bg.png" alt="">
-                                </div>
-                                <address class="contacts">
-                                    <div class="contacts__item">
-                                        <img class="contacts__icon" src="assets/images/icons/map.svg" alt="">
-                                        Санкт-Петербург
-                                    </div>
-                                    <a class="contacts__item" href="mailto:sofigorod@yandex.ru">
-                                        <img class="contacts__icon" src="assets/images/icons/mail.svg" alt="">
-                                        sofigorod@yandex.ru
-                                    </a>
-                                    <a class="contacts__item" href="tel:+79219697771">
-                                        <img class="contacts__icon" src="assets/images/icons/phone.svg" alt="">
-                                        +7 (921) 969-77-71
-                                    </a>
-                                    <ul class="socials">
-                                        <li class="socials__item">
-                                            <a href="#" target="_blank">
-                                                <img src="assets/images/socials/whatsapp.svg" alt="whatsapp">
-                                            </a>
-                                        </li>
-                                        <li class="socials__item">
-                                            <a href="#" target="_blank">
-                                                <img src="assets/images/socials/telegram.svg" alt="telegram">
-                                            </a>
-                                        </li>
-                                        <li class="socials__item">
-                                            <a href="#" target="_blank">
-                                                <img src="assets/images/socials/phone.svg" alt="phone">
-                                            </a>
-                                        </li>
-                                        <li class="socials__item">
-                                            <a href="#" target="_blank">
-                                                <img src="assets/images/socials/vk.svg" alt="vk">
-                                            </a>
-                                        </li>
-                                        <li class="socials__item">
-                                            <a href="#" target="_blank">
-                                                <img src="assets/images/socials/instagram.svg" alt="instagram">
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </address>
-                                <select class="lang">
-                                    <option class="lang__item" value="ru">ru</option>
-                                    <option class="lang__item" value="en">en</option>
-                                </select>
-                            </div>
-                            <div class="header__bottom">
-                                <nav class="menu  header__menu">
-                                    <ul class="menu__list">
-                                        <li><a href="services.html">Наши услуги</a></li>
-                                        <li><a href="about.html">О проекте</a></li>
-                                        <li><a href="gallery.html">Фотогалерея</a></li>
-                                        <li><a href="team.html">Команда</a></li>
-                                        <li><a href="reviews.html">Отзывы</a></li>
-                                        <li><a href="contacts.html">Контакты</a></li>
-                                    </ul>
-                                </nav>
-                                <a class="btn" href="#">Оставить заявку</a>
-                            </div>
+                        <a class="contacts__item" href="tel:+79219697771">
+                            <img class="contacts__icon" src="assets/images/icons/phone.svg" alt="">
+                            +7 (921) 969-77-71
+                        </a>
+                        <ul class="socials  header__socials">
+                            <li class="socials__item">
+                                <a href="#" target="_blank">
+                                    <img src="assets/images/socials/whatsapp.svg" alt="whatsapp">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" target="_blank">
+                                    <img src="assets/images/socials/telegram.svg" alt="telegram">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" target="_blank">
+                                    <img src="assets/images/socials/phone.svg" alt="phone">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" target="_blank">
+                                    <img src="assets/images/socials/vk.svg" alt="vk">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" target="_blank">
+                                    <img src="assets/images/socials/instagram.svg" alt="instagram">
+                                </a>
+                            </li>
+                        </ul>
+                    </address>
+                    <select class="lang">
+                        <option class="lang__item" value="ru">ru</option>
+                        <option class="lang__item" value="en">en</option>
+                    </select>
+                </div> -->
+                        <div class="header__bottom">
+                            <a href="/"><img src="assets/images/logo.svg" alt=""></a>
+                            <nav class="menu  header__menu">
+                                <ul class="menu__list">
+                                    <li><a href="services.html">Наши услуги</a></li>
+                                    <li><a href="about.html">О проекте</a></li>
+                                    <li><a href="gallery.html">Фотогалерея</a></li>
+                                    <li><a href="team.html">Команда</a></li>
+                                    <li><a href="reviews.html">Отзывы</a></li>
+                                    <li><a href="contacts.html">Контакты</a></li>
+                                </ul>
+                            </nav>
+                            <a class="btn" href="#">Оставить заявку</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +98,9 @@
             <section class="page__section  team-preview  background-line-left">
                 <div class="container">
                     <div class="team-preview__inner">
-                        <img class="team-preview__image" src="assets/images/team/1.jpg" alt="">
+                        <div class="team-preview__image">
+                            <img src="assets/images/team/1.jpg" alt="">
+                        </div>
                         <div class="team-preview__info">
                             <h2 class="team-preview__title">София</h2>
                             <p class="team-preview__desc">
@@ -234,7 +229,7 @@
                 <div class="footer__inner">
                     <div class="footer__logo">
                         <img class="footer__logo-img" src="assets/images/logo.svg" alt="">
-                        <ul class="socials">
+                        <ul class="socials  footer__socials">
                             <li class="socials__item">
                                 <a href="#" target="_blank">
                                     <img src="assets/images/socials/whatsapp.svg" alt="whatsapp">
